<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp1.catchcat.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/tf_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@color/colorPrimary"
        android:text="@string/bt_login"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="@dimen/button_menu" />

    <Button
        android:id="@+id/bt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@color/colorPrimary"
        android:text="@string/bt_signin"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="@dimen/button_menu"
        />

</LinearLayout>
