<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="2"
    android:orientation="vertical"
    android:padding="@dimen/NewCatTitleMargin"
    android:weightSum="1"
    tools:context="com.example.hp1.catchcat.MenuActivity">

    <Button
        android:id="@+id/bt_adopt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@color/colorPrimary"
        android:onClick="openAdoptCat"
        android:text="@string/bt_adopt"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/button_menu" />

    <Button
        android:id="@+id/bt_myprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:layout_weight="0.00"
        android:background="@color/colorPrimary"
        android:onClick="openProfile"
        android:text="@string/bt_myprofile"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/button_menu" />

    <Button
        android:id="@+id/bt_foundcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@color/colorPrimary"
        android:onClick="openNewCat"
        android:text="@string/bt_foundcat"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/button_menu" />

    <ImageView
        android:id="@+id/imageViewSylvester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sylvester" />

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="@dimen/bt_logoutdimens"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical|center_horizontal"
        android:text="@string/bt_logout"
        android:textSize="@dimen/button_menu"
        android:textStyle="italic"
        android:onClick="logOut"/>

</LinearLayout>
