<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.hp1.catchcat.NewCatActivity"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NewCatTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@android:color/transparent"
        android:gravity="center_vertical|center_horizontal|center"
        android:padding="@dimen/NewCatTitlePadding"
        android:text="@string/txtNewCatTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/NewCatTitleDimens" />

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="@dimen/NewCatCameraIconDimens"
        android:layout_height="@dimen/NewCatCameraIconDimens"
        android:layout_weight="1"
        app:srcCompat="@drawable/camera_icon" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="4"
        android:rowCount="2">

        <ImageView
            android:id="@+id/NewCatLeftArrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="0"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_rowSpan="1"
            android:elevation="1dp"
            app:srcCompat="@drawable/left_arrow" />

        <ImageView
            android:id="@+id/NewCatThumbnail"
            android:layout_width="@dimen/NewCatCameraIconDimens"
            android:layout_height="@dimen/NewCatCameraIconDimens"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_rowSpan="1"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/NewCatRightArrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="0"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_rowSpan="1"
            android:elevation="1dp"
            app:srcCompat="@drawable/right_arrow" />

    </GridLayout>

    <EditText
        android:id="@+id/NewCatDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNewCatDescription"
        android:inputType="textMultiLine"
        android:maxLength="@integer/max_description" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NewCatTitleMargin"
        android:background="@color/colorPrimary"
        android:text="@string/bt_save"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="@dimen/button_menu" />

</LinearLayout>
